# toadly-interface-app

./: Cargo.toml  build.rs
src/: main.rs
src/app/: mod.rs
src/thread_manager/: mod.rs
src/usb/: mod.rs
src/vedirect/: mod.rs
ui/: mainwindow.slint
